--- a/css/common.css
+++ b/css/common.css
@@ -11,10 +11,11 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  font-family: "Montserrat",
+    sans-serif;
 }
 
 h2 {
-  font-family: "Montserrat", sans-serif;
   font-weight: 600;
   font-size: 24px;
   line-height: 133%;
